#22672 refactoring save point